syntax = "proto3";

package idl;

import "steps.proto";

service CliToHub {
    rpc CheckVersion (CheckVersionRequest) returns (CheckVersionReply) {}
    rpc CheckDiskSpace (CheckDiskSpaceRequest) returns (CheckDiskSpaceReply) {}
    rpc Initialize(InitializeRequest) returns (stream Message) {}
    rpc InitializeCreateCluster(InitializeCreateClusterRequest) returns (stream Message) {}
    rpc Execute(ExecuteRequest) returns (stream Message) {}
    rpc Finalize(FinalizeRequest) returns (stream Message) {}
    rpc SetConfig (SetConfigRequest) returns (SetConfigReply) {}
    rpc GetConfig (GetConfigRequest) returns (GetConfigReply) {}
    rpc RestartAgents(RestartAgentsRequest) returns (RestartAgentsReply) {}
    rpc StopServices(StopServicesRequest) returns (StopServicesReply) {}
}

message InitializeRequest {
    string oldBinDir = 1;
    string newBinDir = 2;
    int32 oldPort = 3;
}
message InitializeCreateClusterRequest {
    repeated uint32 ports = 1;
}
message ExecuteRequest {}
message FinalizeRequest {}

message RestartAgentsRequest {}
message RestartAgentsReply {
    repeated string agentHosts = 1;
}

message StopServicesRequest {}
message StopServicesReply {}

message CheckVersionRequest {}

message CheckVersionReply {
    bool IsVersionCompatible = 1;
}

message CheckDiskSpaceRequest {
  double ratio = 1;
}

message CheckDiskSpaceReply {
  message DiskUsage {
    uint64 available = 1;
    uint64 required = 2;
  }
  map<string, DiskUsage> failed = 1;
}

message PrepareInitClusterRequest {}
message PrepareInitClusterReply {}

message Chunk {
  bytes buffer = 1;
  enum Type {
    UNKNOWN = 0;
    STDOUT = 1;
    STDERR = 2;
  }
  Type type = 2;
}

message Message {
  oneof contents {
    Chunk chunk = 1;
    UpgradeStepStatus status = 2;
  }
}

message SetConfigRequest {
    string name = 1;
    string value = 2;
}
message SetConfigReply {}

message GetConfigRequest {
    string name = 1;
}
message GetConfigReply {
    string value = 1;
}
