syntax = "proto3";

package idl;


message UpgradeStepStatus {
    UpgradeSteps step = 1;
    StepStatus status = 2;
}

enum UpgradeSteps {
    UNKNOWN_STEP = 0; // http://androiddevblog.com/protocol-buffers-pitfall-adding-enum-values/
    CONFIG = 1;
    START_AGENTS = 2;
    CREATE_TARGET_CONFIG = 3;
    SHUTDOWN_SOURCE_CLUSTER = 4;
    INIT_TARGET_CLUSTER = 5;
    SHUTDOWN_TARGET_CLUSTER = 6;
    CHECK_UPGRADE = 7;
    UPGRADE_MASTER = 8;
    COPY_MASTER = 9;
    UPGRADE_PRIMARIES = 10;
    START_TARGET_CLUSTER = 11;
    RECONFIGURE_PORTS = 12;
}

enum StepStatus {
    UNKNOWN_STATUS = 0; // http://androiddevblog.com/protocol-buffers-pitfall-adding-enum-values/
    PENDING = 1;
    RUNNING = 2;
    COMPLETE = 3;
    FAILED = 4;
}
